@@ -1,4 +1,5 @@
 0.04
+ - Update Module::Install to 1.21 version.
 
 0.03 2015-09-18T10:06:48+02:00
  - Add minimal version of Perl.
